--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
                 </h4>
                 <p class="codeLine" data-line-nr="" data-pl="">
                     <span class="blueDark">class</span>
-                    <span class="green">dao</span>
+                    <span class="green">Dao</span>
                     <span class="yellowDark">{</span>
                 </p>
                 <p class="codeLine muted" data-line-nr="" data-pl="0rem">&nbsp;</p>
                 <p class="codeLine muted" data-line-nr="" data-pl="1rem">//I'm ambitious and love coding.</p>
-                <p class="codeLine muted" data-line-nr="" data-pl="1rem">//I've strong willigness to learn.</p>
+                <p class="codeLine muted" data-line-nr="" data-pl="1rem">//I've got strong willingness to learn.</p>
                 <p class="codeLine muted" data-line-nr="" data-pl="1rem">//I'm inventive</p>
                 <p class="codeLine" data-line-nr="" data-pl="0rem">&nbsp;</p>
                 <p class="codeLine" data-line-nr="" data-pl="1rem"><span class="blueDark">constructor</span><span
