--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <div class="description">
                             <h3 class="pr_title">Weatrher App</h3>
                             <div class="line"></div>
-                            <p class="pr_info">Simply app in JS6</p>
+                            <p class="pr_info">Simple app in JS6</p>
                         </div>
                         <div class="pr_image">
                             <a class="link" href="https://dao0dao.github.io/WeatherApp/" target="_blank">
@@ -372,7 +372,7 @@
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">name</span> : <span
                         class="red">'Russian'</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">level</span> : <span
-                        class="red">'C2'</span>
+                        class="red">'Native'</span>
                 </p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">}</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">{</span></p>
