--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="description">
                             <h3 class="pr_title">Toruń's club go</h3>
                             <div class="line"></div>
-                            <p class="pr_info">Co-creator, oficial page</p>
+                            <p class="pr_info">Co-creator, official page</p>
                         </div>
                         <div class="pr_image">
                             <a class="link" href="http://torun.go.art.pl/index.html" target="_blank">
