--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="description">
                             <h3 class="pr_title">Tennis Club</h3>
                             <div class="line"></div>
-                            <p class="pr_info">Oficial page in progress, RWD, calls, sms, scroll spy, LightBox</p>
+                            <p class="pr_info">Official page in progress, RWD, calls, sms, scroll spy, LightBox</p>
                         </div>
                         <div class="pr_image">
                             <a class="link" href="https://dao0dao.github.io/tennisMM/" target="_blank">
