--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Demid Greshnikov">
+    <meta name="description" content="Junior Front-end developer">
     <title>
-        < Dao /> Porftfolio | Jr Front-end</title>
+        < Dao /> Porftfolio | Jr Front-end developer
+    </title>
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/f32918d55f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/main.css">
@@ -112,7 +115,7 @@
                     <!-- project -->
                     <div class="project flex-top">
                         <div class="description">
-                            <h3 class="pr_title">Toruń's club go</h3>
+                            <h2 class="pr_title">Toruń's club go</h2>
                             <div class="line"></div>
                             <p class="pr_info">Co-creator, official page</p>
                         </div>
@@ -126,7 +129,7 @@
                     <!-- project -->
                     <div class="project flex-mid">
                         <div class="description">
-                            <h3 class="pr_title">Website of fake company</h3>
+                            <h2 class="pr_title">Website of fake company</h2>
                             <div class="line"></div>
                             <p class="pr_info">Bootstrap, Animate.css, RWD</p>
                         </div>
@@ -141,7 +144,7 @@
                     <!-- project -->
                     <div class="project flex-bot left">
                         <div class="description">
-                            <h3 class="pr_title">Tennis Club</h3>
+                            <h2 class="pr_title">Tennis Club</h2>
                             <div class="line"></div>
                             <p class="pr_info">Official page in progress, RWD, calls, sms, scroll spy, LightBox</p>
                         </div>
@@ -156,7 +159,7 @@
                     <!-- project -->
                     <div class="project flex-top right">
                         <div class="description">
-                            <h3 class="pr_title">Blog</h3>
+                            <h2 class="pr_title">Blog</h2>
                             <div class="line"></div>
                             <p class="pr_info">Angular, SPA, Api, Firebase, RxJS, registation</p>
                         </div>
@@ -171,7 +174,7 @@
                     <!-- project -->
                     <div class="project flex-bot">
                         <div class="description">
-                            <h3 class="pr_title">To do list</h3>
+                            <h2 class="pr_title">To do list</h2>
                             <div class="line"></div>
                             <p class="pr_info">Angular, Angular Material, Drag&Drop, RWD</p>
                         </div>
@@ -186,7 +189,7 @@
                     <!-- project -->
                     <div class="project flex-mid">
                         <div class="description">
-                            <h3 class="pr_title">Forum</h3>
+                            <h2 class="pr_title">Forum</h2>
                             <div class="line"></div>
                             <p class="pr_info">Angular, SPA, RWD</p>
                         </div>
@@ -201,7 +204,7 @@
                     <!-- project -->
                     <div class="project flex-mid left">
                         <div class="description">
-                            <h3 class="pr_title">Map</h3>
+                            <h2 class="pr_title">Map</h2>
                             <div class="line"></div>
                             <p class="pr_info">React, Creative Tim, desktop only, no live</p>
                         </div>
@@ -215,7 +218,7 @@
                     <!-- project -->
                     <div class="project flex-top">
                         <div class="description">
-                            <h3 class="pr_title">Validation form</h3>
+                            <h2 class="pr_title">Validation form</h2>
                             <div class="line"></div>
                             <p class="pr_info">React, RegExp</p>
                         </div>
@@ -230,7 +233,7 @@
                     <!-- project -->
                     <div class="project flex-mid">
                         <div class="description">
-                            <h3 class="pr_title">Weatrher App</h3>
+                            <h2 class="pr_title">Weatrher App</h2>
                             <div class="line"></div>
                             <p class="pr_info">Simple app in JS6</p>
                         </div>
