add NodeJS project

--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                     <!-- project -->
                     <div class="project flex-top">
                         <div class="description">
+                            <h2 class="pr_title">First NodeJS project - fake shop</h2>
+                            <div class="line"></div>
+                            <p class="pr_info">NodeJS, ExpressJS, EJS, MySQL</p>
+                        </div>
+                        <div class="pr_image">
+                            <a class="link" href="https://my-first-node-js-shop.herokuapp.com/" target="_blank">
+                            </a>
+                            <img class="vertical" src="./img/projects/myFirstNodeJs.png" alt="screen shoot of fake shop">
+                            <div class="pr_shadow"></div>
+                        </div>
+                    </div>
+                    <!-- project -->
+                    <div class="project flex-top">
+                        <div class="description">
                             <h2 class="pr_title">Tournament registration</h2>
                             <div class="line"></div>
                             <p class="pr_info">Angular, Firebase, Sign in and sign up system, cup ladder</p>
