--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         class="blueLight">[</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="red">'HTML/CSS(SASS, SCSS)/JS6',
                         'TypeScript',
-                        'RxJS', 'Angular', 'Angular Material', 'React', 'React Hooks', 'Bootstrap', 'RWD', 'NodeJs', 'ExpressJs', 'MongoDB', 'MySQL'</span><span
+                        'RxJS', 'Angular', 'Angular Material', 'React', 'React Hooks', 'Bootstrap', 'RWD', 'NodeJs', 'ExpressJs', 'MongoDB', 'MySQL', 'RxJS'</span><span
                         class="cursor cursor--animation"></span> <span class="blueLight">]</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="1rem"><span class="purple">}</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="0rem">&nbsp;</p>
