--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                     <!-- project -->
                     <div class="project flex-top">
                         <div class="description">
+                            <h2 class="pr_title">First NestJS project - court reservation</h2>
+                            <div class="line"></div>
+                            <p class="pr_info">NestJS, MySQL, Angular15</p>
+                        </div>
+                        <div class="pr_image">
+                            <a class="link" href="https://kortymm.onrender.com/" target="_blank">
+                            </a>
+                            <img class="vertical" src="./img/projects/FirstNestJS.png" alt="screen shoot of court reservation">
+                            <div class="pr_shadow"></div>
+                        </div>
+                    </div>
+                    <!-- project -->
+                    <div class="project flex-top">
+                        <div class="description">
                             <h2 class="pr_title">First NodeJS project - fake shop</h2>
                             <div class="line"></div>
                             <p class="pr_info">NodeJS, ExpressJS, EJS, MySQL</p>
@@ -386,7 +400,7 @@
                         class="blueLight">[</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="red">'HTML/CSS(SASS, SCSS)/JS6',
                         'TypeScript',
-                        'RxJS', 'Angular', 'Angular Material', 'React', 'React Hooks', 'Bootstrap', 'RWD', 'NodeJs', 'ExpressJs', 'MongoDB', 'MySQL'</span><span
+                        'RxJS', 'Angular', 'Angular Material', 'React', 'React Hooks', 'Bootstrap', 'RWD', 'NodeJs', 'ExpressJs', 'MongoDB', 'MySQL', 'NestJS'</span><span
                         class="cursor cursor--animation"></span> <span class="blueLight">]</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="1rem"><span class="purple">}</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="0rem">&nbsp;</p>
@@ -410,14 +424,14 @@
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">name</span> : <span
                         class="red">'English'</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">level</span> : <span
-                        class="red">'B1'</span>
+                        class="red">'B1/B2'</span>
                 </p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">}</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">{</span></p>
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">name</span> : <span
                         class="red">'Russian'</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2.5rem"><span class="blueLight">level</span> : <span
-                        class="red">'Native'</span>
+                        class="red">'C2'</span>
                 </p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">}</span>,</p>
                 <p class="codeLine" data-line-nr="" data-pl="2rem"><span class="yellowDark">{</span></p>
